# turbo-broccoli

./: .gitignore  CHANGELOG.md  Makefile  README.md  index.html  pylintrc  pyproject.toml  pytest.ini  requirements.dev.txt  search.js  setup.py  template.py  turbo_broccoli.html
.github/workflows/: gh-pages.yml  pypi.yml
old/: keras.py  tensorflow.py  test_keras.py
tests/: common.py  test_bokeh.py  test_bytes.py  test_collections.py  test_dataclass.py  test_datetime.py  test_deque.py  test_dict.py  test_embedded.py  test_external.py  test_generic.py  test_guard.py  test_keras.py  test_native.py  test_networkx.py  test_nodecode.py  test_numpy.py  test_pandas.py  test_parallel.py  test_pathlib.py  test_pytorch.py  test_scipy.py  test_secret.py  test_sklearn.py  test_tensorflow.py  test_turbo_broccoli.py  test_user.py  test_uuid.py
turbo_broccoli/: __init__.py  __main__.py  bokeh.html  bokeh.py  bytes.html  bytes.py  collections.html  collections.py  context.html  context.py  custom.html  dataclass.html  dataclass.py  datetime.py  dict.html  dict.py  environment.html  environment.py  exceptions.html  generic.html  generic.py  guard.html  guard.py  keras.html  keras.py  native.html  native.py  numpy.html  numpy.py  pandas.html  pandas.py  parallel.html  parallel.py  pytorch.html  pytorch.py  scipy.html  scipy.py  secret.html  secret.py  sklearn.html  (+8 more)
turbo_broccoli/custom/: __init__.py  bokeh.html  bokeh.py  bytes.html  bytes.py  collections.html  collections.py  dataclass.html  dataclass.py  datetime.html  datetime.py  dct.html  dct.py  embedded.html  embedded.py  external.html  external.py  generic.html  generic.py  keras.html  keras.py  networkx.html  networkx.py  numpy.html  numpy.py  pandas.html  pandas.py  pathlib.html  pathlib.py  pytorch.html  pytorch.py  scipy.html  scipy.py  secret.html  secret.py  sklearn.html  sklearn.py  tensorflow.html  tensorflow.py  uuid.html  (+1 more)
